--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- BOTÕES PRINCIPAIS (grid responsivo) -->
       <div class="btn-grid py-3">
-        <a href="sagrada-feminina.html" class="btn btn-vanidoya btn-service">Sagrada Feminina</a>
+        <a href="sagrada‑feminina.html" class="btn btn-vanidoya btn-service">Sagrada Feminina</a>
         <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
         <a id="btn-feitio" href="feitio-escola.html"                class="btn btn-vanidoya btn-service">Feitio Escola<br>Aya Curandeira</a>
         <a href="https://prontosocorroespiritual.com/cursos/"       class="btn btn-vanidoya btn-service">Escola de Magia</a>
