--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
         <a id="btn-feitio" href="feitio-escola.html"                class="btn btn-vanidoya btn-service">Feitio Escola<br>Aya Curandeira</a>
         <a href="https://prontosocorroespiritual.com/cursos/"       class="btn btn-vanidoya btn-service">Escola de Magia</a>
-        <a href="https://pset.simplybook.me/v2/#book"               class="btn btn-vanidoya btn-service">Atendimentos<br>e Produtos</a>
+        <a href="https://pset.simplybook.me/v2/#book"               class="btn btn-vanidoya btn-service">Atendimentos</a>
+        <a href="https://pset.simplybook.me/v2/#products"           class="btn btn-vanidoya btn-service">Produtos</a>
+
       </div>
     </div>
   </main>
