--- a/feitio-escola.html
+++ b/feitio-escola.html
@@ -1,4 +1,4 @@
-<!-- feitio-escola.html -->
+<!-- feitio-escola.html (widget fix) -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,34 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Feitio Escola Aya Curandeira | Vani D’Oyá</title>
 
-  <!-- fontes + Bootstrap + seu CSS principal -->
+  <!-- Fontes + Bootstrap + CSS principal -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 
   <!-- moldura para vídeo 16 × 9 -->
   <style>
-    .embed-16x9{
-      position:relative;
-      width:100%;
-      aspect-ratio:16/9;
-      overflow:hidden;
-      border-radius:1rem;
-      border:1px solid rgba(255,255,255,.2);
-      box-shadow:0 0 20px rgba(255,255,255,.1);
-      backdrop-filter:blur(2px);
-      background:rgba(255,255,255,.05);
+    .embed-16x9 {
+      position: relative;
+      width: 100%;
+      aspect-ratio: 16/9;
+      overflow: hidden;
+      border-radius: 1rem;
+      border: 1px solid rgba(255, 255, 255, .2);
+      box-shadow: 0 0 20px rgba(255, 255, 255, .1);
+      backdrop-filter: blur(2px);
+      background: rgba(255, 255, 255, .05);
     }
-    @supports not (aspect-ratio:1){
-      .embed-16x9{padding-top:56.25%;}
+    @supports not (aspect-ratio: 1) {
+      .embed-16x9 { padding-top: 56.25%; }
     }
-    .embed-16x9 iframe{
-      position:absolute;
-      top:0;left:0;
-      width:100%;height:100%;
-      border:0;border-radius:1rem;
+    .embed-16x9 iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      border-radius: 1rem;
     }
-    @media(min-width:992px){ .embed-16x9{max-width:640px;margin-inline:auto;} }
+    @media (min-width: 992px) {
+      .embed-16x9 { max-width: 640px; margin-inline: auto; }
+    }
   </style>
 </head>
 
@@ -57,35 +61,25 @@
   </p>
 
   <!-- vídeo horizontal -->
-<div class="embed-16x9">
-  <iframe
-    src="https://www.youtube.com/embed/8VnEo12d0-0?autoplay=1&mute=1&controls=1&rel=0&modestbranding=1"
-    title="Feitio Escola Aya Curandeira"
-    allow="autoplay; encrypted-media"
-    allowfullscreen>
-  </iframe>
-</div>
-
-
-  <!-- investimento + CTA -->
-  <div class="my-4">
-    <h3 class="gold mb-3">Investimento</h3>
-    <h5 class="mb-1">
-      💳  R$ 400,00
-    </h5>
-    <h6>Refeições inclusas</h6>
-   <a href=//"https://pag.ae/7_PwaScM3" target="_blank"
-       class="btn btn-vanidoya btn-lg px-5">
-      Garantir minha vaga
-    </a>
+  <div class="embed-16x9">
+    <iframe
+      src="https://www.youtube.com/embed/8VnEo12d0-0?autoplay=1&mute=1&controls=1&rel=0&modestbranding=1"
+      title="Feitio Escola Aya Curandeira"
+      allow="autoplay; encrypted-media"
+      allowfullscreen></iframe>
   </div>
 
+  <!-- investimento (botão removido; widget assume o CTA) -->
+  <div class="my-4">
+    <h3 class="gold mb-3">Investimento</h3>
+    <h5 class="mb-1">💳  R$ 400,00</h5>
+    <h6>Refeições inclusas</h6>
+  </div>
   
   <!-- grupo WhatsApp -->
   <p class="fs-6">
     🤝 Após o pagamento, entre no nosso
-    <a href="https://chat.whatsapp.com/GHcG9PzCRl9IT1xm8gMdC9" target="_blank"
-       class="gold fw-bold text-decoration-underline">Grupo&nbsp;de&nbsp;WhatsApp</a>
+    <a href="https://chat.whatsapp.com/GHcG9PzCRl9IT1xm8gMdC9" target="_blank" class="gold fw-bold text-decoration-underline">Grupo&nbsp;de&nbsp;WhatsApp</a>
     para receber todas as instruções.
   </p>
 
@@ -95,6 +89,49 @@
 <a href="index.html" class="btn btn-outline-light mt-4">← Voltar ao início</a>
 </main>
 
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- SimplyBook widget -->
+<script src="//widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
+<script type="text/javascript">
+  var widget = new SimplybookWidget({
+    "widget_type":"button",
+    "url":"https:\/\/pset.simplybook.me",
+    "theme":"minimal",
+    "theme_settings":{
+      "timeline_show_end_time":"1",
+      "timeline_modern_display":"as_slots",
+      "hide_company_label":"0",
+      "timeline_hide_unavailable":"1",
+      "hide_past_days":"0",
+      "sb_base_color":"#ff8291",
+      "btn_color_1":"#ef9da8,#ff8e9c,#f3a2d3",
+      "link_color":"#ff8291",
+      "display_item_mode":"block",
+      "body_bg_color":"#a14d4d",
+      "sb_review_image":"50",
+      "sb_review_image_preview":"\/uploads\/pset\/image_files\/preview\/687550c76a42c07b7a598c646d09b36d.jpeg",
+      "dark_font_color":"#2b212b",
+      "light_font_color":"#ffffff",
+      "sb_company_label_color":"#ff8291",
+      "hide_img_mode":"0",
+      "sb_busy":"#c7b3b3",
+      "sb_available":"#2b212b"},
+    "timeline":"modern",
+    "datepicker":"inline_datepicker",
+    "is_rtl":false,
+    "app_config":{
+        "clear_session":0,
+        "allow_switch_to_ada":0,
+        "predefined":{
+            "service":"8",
+            "category":"1"}},
+    "button_title":"Clique aqui e reserve seu lugar",
+    "button_background_color":"#8f1321",
+    "button_text_color":"#ffffff",
+    "button_position":"right",
+    "button_position_offset":"55%"});
+</script>
 </body>
 </html>
