--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -46,10 +46,10 @@
         <p class="fst-italic">Vista roupas leves e claras; evite peças apertadas que impeçam o fluxo de energia.</p>
 
         <h5 class="gold mt-4">Materiais individuais</h5>
-        <ul class="custom"><li>Tapete ou colchonete</li><li>Cadeira dobrável (opcional)</li><li>Roupa de banho &amp; toalha</li><li>Agasalho</li><li>Repelente</li><li>Garrafa de água</li><li>Itens extras para conforto</li></ul>
+        <ul><li>Tapete ou colchonete</li><li>Cadeira dobrável (opcional)</li><li>Roupa de banho &amp; toalha</li><li>Agasalho</li><li>Repelente</li><li>Garrafa de água</li><li>Itens extras para conforto</li></ul>
 
         <h5 class="gold mt-4">Para o trabalho magístico</h5>
-        <ul class="custom"><li>2 velas brancas com suporte</li><li>Espelho ritual</li><li>Caderno e grafite/caneta</li></ul>
+        <ul><li>2 velas brancas com suporte</li><li>Espelho ritual</li><li>Caderno e grafite/caneta</li></ul>
 
         <h5 class="gold mt-4">Ceia colaborativa</h5>
         <p>Traga <em>alimentos vegetarianos</em> prontos (pastas, pães, frutas, castanhas, sucos, bolos, tortas, chás) para celebrarmos juntas.</p>
