--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -55,12 +55,30 @@
         <p>Traga <em>alimentos vegetarianos</em> prontos (pastas, pães, frutas, castanhas, sucos, bolos, tortas, chás) para celebrarmos juntas.</p>
 
         <h5 class="gold mt-4">Medicina Ayahuasca (opcional)</h5>
-        <p>Faça jejum de <strong>3 dias</strong> (sem carne, álcool, sexo promíscuo e substâncias tóxicas) antes da cerimônia. Informe-nos na <em>Anamnese Prévia</em> sobre medicamentos em uso.</p>
+        <p>
+  Faça jejum de <strong>3&nbsp;dias</strong> (sem carne, álcool, sexo promíscuo e substâncias tóxicas) antes da cerimônia.
+  Informe‑nos na
+  <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w/viewform"
+     target="_blank" rel="noopener"
+     style="color:#ff8291;font-weight:600;text-decoration:underline;transition:color .2s ease;">
+     Anamnese&nbsp;Prévia
+  </a>
+  sobre medicamentos em uso.
+</p>
 
-        <p class="mt-3">✨ Para dúvidas, fale conosco.</p>
+<!-- copie EXATAMENTE como abaixo, só mude o caminho da imagem -->
+<a href="https://chat.whatsapp.com/HqZ8ZONcGZuGoOPWkyHeA5"
+   target="_blank" rel="noopener"
+   class="btn-whats-pro">
+  <img src="sementes-branco_leve2.png"
+       alt="Grupo no WhatsApp" class="btn-whats-pro__logo">
+  <span class="btn-whats-pro__text">Estamos aqui<br>pra você  💚</span>
+</a>
+
+
+
+
       </div>
-
-      <p class="small mt-4">Encontros presenciais no Rio de Janeiro. Para vivências online, consulte disponibilidade.</p>
       <a href="index.html" class="btn btn-outline-dark mt-3">← Voltar</a>
     </section>
   </main>
@@ -69,7 +87,7 @@
   <!-- SimplyBook widget botão topo -->
   <script src="https://widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
   <script type="text/javascript">
-    var widget = new SimplybookWidget({"widget_type":"button","url":"https://pset.simplybook.me","theme":"minimal","theme_settings":{"timeline_show_end_time":"1","timeline_modern_display":"as_slots","hide_company_label":"0","timeline_hide_unavailable":"1","hide_past_days":"0","sb_base_color":"#ff8291","btn_color_1":"#ef9da8,#ff8e9c,#f3a2d3","link_color":"#ff8291","display_item_mode":"block","body_bg_color":"#a14d4d","sb_review_image":"50","sb_review_image_preview":"/uploads/pset/image_files/preview/687550c76a42c07b7a598c646d09b36d.jpeg","dark_font_color":"#2b212b","light_font_color":"#ffffff","sb_company_label_color":"#ff8291","hide_img_mode":"0","sb_busy":"#c7b3b3","sb_available":"#2b212b"},"timeline":"modern","datepicker":"inline_datepicker","is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":{"service":"11","category":"1"}},"button_title":"Clique aqui e reserve seu lugar","button_background_color":"#ff8291","button_text_color":"#ffffff","button_position":"right","button_position_offset":"55%"});
+    var widget = new SimplybookWidget({"widget_type":"button","url":"https://pset.simplybook.me","theme":"minimal","theme_settings":{"timeline_show_end_time":"1","timeline_modern_display":"as_slots","hide_company_label":"0","timeline_hide_unavailable":"1","hide_past_days":"0","sb_base_color":"#ff8291","btn_color_1":"#ef9da8,#ff8e9c,#f3a2d3","link_color":"#ff8291","display_item_mode":"block","body_bg_color":"#a14d4d","sb_review_image":"50","sb_review_image_preview":"/uploads/pset/image_files/preview/687550c76a42c07b7a598c646d09b36d.jpeg","dark_font_color":"#2b212b","light_font_color":"#ffffff","sb_company_label_color":"#ff8291","hide_img_mode":"0","sb_busy":"#c7b3b3","sb_available":"#2b212b"},"timeline":"modern","datepicker":"inline_datepicker","is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":{"service":"11","category":"1"}},"button_title":"Garanta sua vaga 💖","button_background_color":"#ff8291","button_text_color":"#ffffff","button_position":"right","button_position_offset":"55%"});
   </script>
 </body>
 </html>
