--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -72,7 +72,7 @@
    class="btn-whats-pro">
   <img src="sementes-branco_leve2.png"
        alt="Grupo no WhatsApp" class="btn-whats-pro__logo">
-  <span class="btn-whats-pro__text">Estamos aqui<br>pra você  💚</span>
+  <span class="btn-whats-pro__text">Sinta-se segura<br>para perguntar</span>
 </a>
 
 
