--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -66,18 +66,18 @@
   sobre medicamentos em uso.
 </p>
 
-<!-- copie EXATAMENTE como abaixo, só mude o caminho da imagem -->
-<a href="https://chat.whatsapp.com/HqZ8ZONcGZuGoOPWkyHeA5"
-   target="_blank" rel="noopener"
-   class="btn-whats-pro">
-  <img src="sementes-branco_leve2.png"
-       alt="Grupo no WhatsApp" class="btn-whats-pro__logo">
-  <span class="btn-whats-pro__text">Sinta-se segura<br>para perguntar</span>
-</a>
+<br>
+<!-- Envolva o botão em uma div -->
+<div class="btn-center">
+  <a href="https://chat.whatsapp.com/HqZ8ZONcGZuGoOPWkyHeA5"
+     target="_blank" rel="noopener"
+     class="btn-whats-pro">
+    <img src="sementes-branco_leve2.png" alt="WhatsApp" class="btn-whats-pro__logo">
+  <span class="btn-whats-pro__text">Alguma dúvida?<br>Sinta-se segura<br>para perguntar</span>
+  </a>
+</div>
 
-
-
-
+<br>
       </div>
       <a href="index.html" class="btn btn-outline-dark mt-3">← Voltar</a>
     </section>
