--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -73,7 +73,7 @@
      target="_blank" rel="noopener"
      class="btn-whats-pro">
     <img src="sementes-branco_leve2.png" alt="WhatsApp" class="btn-whats-pro__logo">
-  <span class="btn-whats-pro__text">Alguma dúvida?<br>Sinta-se segura<br>para perguntar</span>
+  <span class="btn-whats-pro__text">Dúvida?<br>Fale com<br>uma de nós</span>
   </a>
 </div>
 
