--- a/index.html
+++ b/index.html
@@ -1,91 +1,253 @@
+<!-- index.html – arquivo completo e pronto para produção -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <!-- Google Analytics -->
+  <!-- Google Analytics (inalterado) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2KDTRH8GV3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
-    gtag('config', 'G-2KDTRH8GV3');
-  </script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-2KDTRH8GV3');</script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>Vani D'Oyá – Conexão Espiritual</title>
-  <meta name="description" content="Cursos, rituais e atendimentos espirituais para sua transformação com a Sacerdotisa Vani D'Oyá.">
+  <meta name="description" content="Vivências, cursos, atendimentos e produtos para sua transformação espiritual com a Sacerdotisa Vani D'Oyá.">
   <link rel="canonical" href="https://prontosocorroespiritual.com/">
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:title"       content="Vani D'Oyá – Conexão Espiritual">
-  <meta property="og:description" content="Transforme‑se com magia da natureza, oráculos e medicinas da floresta.">
-  <meta property="og:image"      content="https://prontosocorroespiritual.com/foto-vanidoya.webp">
-  <meta property="og:url"        content="https://prontosocorroespiritual.com/">
-  <meta property="og:type"       content="website">
+  <!-- OG / Twitter -->
+  <meta property="og:title" content="Vani D'Oyá – Conexão Espiritual">
+  <meta property="og:description" content="Transforme‑se com a magia da natureza, oráculos e medicinas da floresta.">
+  <meta property="og:image" content="https://prontosocorroespiritual.com/foto-vanidoya.webp">
+  <meta property="og:url" content="https://prontosocorroespiritual.com/">
+  <meta property="og:type" content="website">
 
   <!-- JSON‑LD -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","name":"Vani D'Oyá","url":"https://prontosocorroespiritual.com/","image":"https://prontosocorroespiritual.com/foto-vanidoya.webp","jobTitle":"Guia Espiritual","sameAs":["https://instagram.com/sacerdotisa_vanidoya","https://wa.me/5521972280397"]}</script>
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
-
-  <!-- CSS externos -->
+  <!-- Google Fonts & CSS externos -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Ajustes visuais internos -->
+  <style>
+    /* Foto topo */
+    .portrait{width:180px;height:180px;object-fit:cover;border-radius:50%;border:4px solid var(--dourado);box-shadow:0 4px 12px rgba(0,0,0,.4);}  
+    /* Moldura vidro violeta */
+    .hero-card{background:rgba(118,75,162,.28);backdrop-filter:blur(14px) saturate(160%);border:1px solid rgba(255,255,255,.17);border-radius:1rem;}
+
+    /* Botões principais – 3D gradiente + contorno */
+    .btn-vanidoya{
+      background:linear-gradient(135deg,var(--violeta) 0%,var(--rosa) 100%);
+      font-size:1.1rem;font-weight:700;color:#fff;
+      border:2px solid rgba(255,255,255,.36);
+      border-radius:52px;
+      box-shadow:inset 0 2px 4px rgba(255,255,255,.25),0 6px 14px rgba(0,0,0,.35);
+      transition:transform .25s, box-shadow .25s;
+    }
+    .btn-vanidoya:hover{transform:translateY(-5px);box-shadow:inset 0 2px 4px rgba(255,255,255,.25),0 10px 20px rgba(0,0,0,.45);}  
+
+    /* Botão flutuante destaque */
+/* === BOTÃO FLUTUANTE DESTAQUE === */
+.floating-highlight{
+  position:fixed;
+  bottom:95px;
+  right:24px;
+
+  padding:14px 28px;
+  border-radius:46px;
+  text-decoration:none;                 /* remove sublinhado */
+
+  /* gradiente dourado */
+  background:linear-gradient(135deg,#f9d976 0%,#f39c12 100%);
+  color:#fff;
+  font-weight:700;
+
+  /* contorno e sombras 3D */
+  border:2px solid rgba(255,255,255,.38);
+  box-shadow:
+    inset 0 2px 4px rgba(255,255,255,.25),  /* brilho interno */
+    0 8px 24px rgba(0,0,0,.45);             /* sombra externa */
+
+  z-index:1080;
+  transition:transform .25s, box-shadow .25s;
+}
+.floating-highlight:hover{
+  transform:translateY(-6px);
+  box-shadow:
+    inset 0 2px 4px rgba(255,255,255,.25),
+    0 12px 32px rgba(0,0,0,.55);
+}
+
+  </style>
 </head>
 <body>
+  <!-- Botão “</>” contato dev -->
+  <a href="https://wa.me/5521970059636?text=Gostei%20do%20site%20da%20Vani.%20Vamos%20conversar%3F" class="code-contact-btn" target="_blank" title="Gostou do site? Fale comigo">&lt;/&gt;</a>
 
-  <!-- Botão “</>” para contato rápido -->
-<!-- Botão “</>” para contato rápido -->
-<a href="https://wa.me/5521970059636?text=Gostei%20do%20site%20da%20Vani.%20Vamos%20conversar%3F"
-   class="code-contact-btn"
-   target="_blank"
-   title="Gostou do site? Fale comigo">&lt;/&gt;</a>
-
-
-  <main class="container-fluid">
-    <div class="container text-center py-3">
-      <img src="foto-vanidoya.webp" alt="Vani D'Oyá"
-           class="rounded-circle mb-3" style="width:200px;border:4px solid #FFDAB9;" loading="lazy">
-
-      <div class="container text-center py-2 glass">
-        <h5 class="brand-color">Sacerdotisa</h5>
-        <h1 class="brand-color" id="profile-title">Vani D'Oyá</h1>
-        <h6 id="profile-subtitle">Guia Espiritual | Conexão e Transformação</h6>
-      </div>
-
-      <!-- BOTÕES PRINCIPAIS (grid responsivo) -->
-      <div class="btn-grid py-3">
-        <a href="sagrada‑feminina.html" class="btn btn-vanidoya btn-service">Sagrada Feminina</a>
-        <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
-        <a id="btn-feitio" href="feitio-escola.html"                class="btn btn-vanidoya btn-service">Feitio Escola<br>Aya Curandeira</a>
-        <a href="https://prontosocorroespiritual.com/cursos/"       class="btn btn-vanidoya btn-service">Escola de Magia</a>
-        <a href="https://pset.simplybook.me/v2/#book"               class="btn btn-vanidoya btn-service">Atendimentos</a>
-        <a href="https://pset.simplybook.me/v2/#products"           class="btn btn-vanidoya btn-service">Produtos</a>
-
-      </div>
+  <!-- ===== HERO / LINKTREE ===== -->
+  <header class="container text-center py-4">
+    <img src="foto-vanidoya.webp" alt="Vani D'Oyá" class="portrait mb-3" loading="lazy">
+    <div class="glass hero-card p-3 mx-auto" style="max-width:420px;">
+      <h5 class="brand-color m-0">Sacerdotisa</h5>
+      <h1 class="brand-color m-0">Vani D'Oyá</h1>
+      <p class="subtitle mb-0">Guia Espiritual | Conexão e Transformação</p>
     </div>
+    <nav class="btn-grid mt-4">
+      <a href="#vivencias"    class="btn btn-vanidoya btn-service">Vivências</a>
+      <a href="#cursos"       class="btn btn-vanidoya btn-service">Cursos</a>
+      <a href="#atendimentos" class="btn btn-vanidoya btn-service">Atendimentos</a>
+      <a href="#produtos"     class="btn btn-vanidoya btn-service">Produtos</a>
+    </nav>
+  </header>
+
+  <main class="container-fluid g-0">
+    <!-- ===== Vivências ===== -->
+    <section id="vivencias" class="container glass section">
+      <h2 class="section-title">Vivências</h2>
+      
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="SF03.jpeg" class="card-img-top" style="object-position:center 80%" alt="Sagrada Feminina" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Sagrada Feminina</h3>
+              <p class="card-text flex-grow-1">Celebre o universo feminino em sororidade e cura.</p>
+              <a href="sagrada‑feminina.html" class="btn btn-outline-light mt-auto">Detalhes</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="feitio.jpeg" class="card-img-top" alt="Feitio Escola" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Feitio Escola</h3>
+              <p class="card-text flex-grow-1">Retiro com medicina Aya e aprendizado colaborativo.</p>
+              <a href="feitio-escola.html" class="btn btn-outline-light mt-auto">Detalhes</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center mb-4">
+        <br>
+  <a href="https://pset.simplybook.me/v2/#book/category/1/count/1/"
+     class="btn btn-vanidoya btn-inline px-4 py-2"
+     target="_blank" rel="noopener">
+    Agendar Vivência
+  </a>
+</div>
+
+    </section>
+
+    <!-- ===== Cursos ===== -->
+    <section id="cursos" class="container glass section">
+      <h2 class="section-title">Cursos</h2>
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="escola.jpg" class="card-img-top" object-position="bottom" alt="Escola de Magia" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Escola de Magia</h3>
+              <p class="card-text flex-grow-1">Aulas gravadas e ao vivo sobre práticas ancestrais.</p>
+              <a href="https://prontosocorroespiritual.com/cursos/" target="_blank" class="btn btn-vanidoya mt-auto" rel="noopener">Explorar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+              <img src="baralho cigano.JPG" class="card-img-top" object-position="center 10%" alt="Baralho Cigano Avançado" loading="lazy">
+                        <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Baralho Cigano Avançado</h3>
+              <p class="card-text flex-grow-1">18 anos de experiência condensados em aulas didáticas.</p>
+              <a href="curso-avancado-baralho-cigano.html" class="btn btn-outline-light mt-auto">Detalhes</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===== Atendimentos ===== -->
+    <section id="atendimentos" class="container glass section">
+      <h2 class="section-title">Atendimentos</h2>
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="BUZIOS.JPG" class="card-img-top" style="object-position:center 90%" alt="Agendar Atendimento" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Agendar Atendimento</h3>
+              <p class="card-text flex-grow-1">Escolha data e horário para consultar‑se com Vani.</p>
+              <a href="https://pset.simplybook.me/v2/#book/category/2/count/1/" target="_blank"
+                 class="btn btn-vanidoya mt-auto" rel="noopener">Agendar</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="baralho cigano.JPG" class="card-img-top" style="object-position:center 70%" alt="Consulta Oracular" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Consulta Oracular</h3>
+              <p class="card-text flex-grow-1">Orientação energética com Baralho Cigano e Médiuns.</p>
+              <a href="https://pset.simplybook.me/v2/#book/category/2/count/1/" target="_blank"
+                 class="btn btn-outline-light mt-auto" rel="noopener">Detalhes</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ===== Produtos ===== -->
+    <section id="produtos" class="container glass section">
+      <h2 class="section-title">Produtos</h2>
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="microdosecomgarrafa.JPG" class="card-img-top" style="object-position:center 80%" alt="Medicinas da Floresta" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Alquimias</h3>
+              <p class="card-text flex-grow-1">Limpeza vibracional com ervas consagradas.</p>
+              <a href="https://pset.simplybook.me/v2/#products/category/1/" target="_blank"
+                 class="btn btn-vanidoya mt-auto" rel="noopener">Escolha a sua</a>
+            </div>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="col-md-6">
+          <div class="card glass h-100 text-center">
+            <img src="microdose.JPG" class="card-img-top" alt="Micro Dose" loading="lazy">
+            <div class="card-body d-flex flex-column">
+              <h3 class="card-title">Micro Dose</h3>
+              <p class="card-text flex-grow-1">A Molécula do Espírito em gotas</p>
+              <a href="https://pset.simplybook.me/v2/#products/category/1/" target="_blank"
+                 class="btn btn-outline-light mt-auto" rel="noopener">Compre</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <!-- FOOTER (mantido) -->
+  <!-- ===== Botão Flutuante Destaque ===== -->
+  <a href="sagrada‑feminina.html" class="floating-highlight">🌟 Destaque</a>
+
+  <!-- ===== FOOTER ===== -->
   <footer class="site-footer">
     <div class="footer-inner">
-      <a class="icon-btn" href="https://wa.me/5521972280397" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-      <a class="icon-btn" href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a class="icon-btn" href="https://wa.me/5521972280397" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      <a class="icon-btn" href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       <button id="share-btn"  class="icon-btn" type="button" aria-label="Compartilhar"><i class="fas fa-share-alt"></i></button>
       <button id="forest-btn" class="icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#forestModal"  aria-label="Medicinas da Floresta"><i class="fas fa-leaf"></i></button>
       <button id="pay-btn"    class="icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#paymentModal" aria-label="Doação PIX"><i class="fas fa-qrcode"></i></button>
     </div>
   </footer>
 
-  <!-- ---- MODAIS (sem alterações) ---- -->
-  <!-- FOREST MEDICINE MODAL -->
+  <!-- ===== MODAIS (mesmos do site antigo) ===== -->
+  <!-- Medicinas da Floresta -->
   <div class="modal fade" id="forestModal" tabindex="-1" aria-labelledby="forestModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content glass p-3 text-center">
+      <div class="modal-content glass text-center p-3">
         <div class="modal-header border-0">
           <h5 class="modal-title" id="forestModalLabel">Medicinas da Floresta</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -99,10 +261,10 @@
     </div>
   </div>
 
-  <!-- PAYMENT MODAL -->
+  <!-- Pagamento / Doação -->
   <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content glass p-3 text-center">
+      <div class="modal-content glass text-center p-3">
         <div class="modal-header border-0">
           <h5 class="modal-title" id="paymentModalLabel">Contribua com a missão</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -117,8 +279,26 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Share fallback -->
+  <div class="modal fade" id="shareModal" tabindex="-1" aria-labelledby="shareModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content glass text-center p-3">
+        <div class="modal-header border-0">
+          <h5 class="modal-title" id="shareModalLabel">Compartilhar site</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Copie o link e compartilhe com quem precisa:</p>
+          <input id="site-link" type="text" class="form-control mb-3 text-center" readonly value="https://prontosocorroespiritual.com/">
+          <button id="share-copy" class="btn btn-vanidoya">Copiar link</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="scripts.js"></script>
 </body>
 </html>
+
