--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       <a href="#vivencias"    class="btn btn-vanidoya btn-service">Vivências</a>
       <a href="#cursos"       class="btn btn-vanidoya btn-service">Cursos</a>
       <a href="#atendimentos" class="btn btn-vanidoya btn-service">Atendimentos</a>
-      <a href="#produtos"     class="btn btn-vanidoya btn-service">Produtos</a>
+      <a href="#produtos"     class="btn btn-vanidoya btn-service">Alquimias</a>
     </nav>
   </header>
 
   <main class="container-fluid g-0">
     <!-- ===== Vivências ===== -->
     <section id="vivencias" class="container glass section">
-      <h2 class="section-title">Vivências</h2>
+      <h2 class="section-title">Vivências e Eventos</h2>
       
       <div class="row g-4">
         <div class="col-md-6">
@@ -119,7 +119,7 @@
 
     <!-- ===== Atendimentos ===== -->
     <section id="atendimentos" class="container glass section">
-      <h2 class="section-title">Atendimentos</h2>
+      <h2 class="section-title">Terapias e Práticas</h2>
       <div class="row g-4">
         <!-- Card 1 -->
         <div class="col-md-6">
@@ -150,7 +150,7 @@
 
     <!-- ===== Produtos ===== -->
     <section id="produtos" class="container glass section">
-      <h2 class="section-title">Produtos</h2>
+      <h2 class="section-title">Alquimias</h2>
       <div class="row g-4">
         <!-- Card 1 -->
         <div class="col-md-6">
