--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="glass hero-card p-3 mx-auto" style="max-width:420px;">
       <h5 class="brand-color m-0">Sacerdotisa</h5>
       <h1 class="brand-color m-0">Vani D'Oyá</h1>
-      <p class="subtitle mb-0">Guia Espiritual | Conexão e Transformação</p>
+      <p class="subtitle mb-0">Guia Espiritual<br>Conexão e Transformação</p>
     </div>
     <nav class="btn-grid mt-4">
       <a href="#vivencias"    class="btn btn-vanidoya btn-service">Vivências</a>
