--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="card-body d-flex flex-column">
               <h3 class="card-title">Escola de Magia</h3>
               <p class="card-text flex-grow-1">Aulas gravadas e ao vivo sobre práticas ancestrais.</p>
-              <a href="https://prontosocorroespiritual.com/cursos/" target="_blank" class="btn btn-vanidoya mt-auto" rel="noopener">Explorar</a>
+              <a href="https://embaot333.kpages.online/passaporte-para-escola-de-magia-e-bruxaria-antiga-ordem-triplice-cc7195fe-7eb1-4b13-b337-3281687d5598" target="_blank" class="btn btn-vanidoya mt-auto" rel="noopener">Explorar</a>
             </div>
           </div>
         </div>
