--- a/feitio-escola.html
+++ b/feitio-escola.html
@@ -73,7 +73,7 @@
   <div class="my-4">
     <h3 class="gold mb-3">Investimento</h3>
     <h5 class="mb-3">💳 R$ 206,00</h5>
-    <a id="pay-link" href="https://pag.ae/7_PwaScM3" class="btn btn-vanidoya" target="_blank" rel="noopener noreferrer">Reservar vaga</a>
+    <a id="pay-link" href="https://pag.ae/7_PwaScM3" class="btn btn-vanidoya" target="_blank" rel="noopener noreferrer">Garantir minha vaga</a>
   </div>
   
   <!-- grupo WhatsApp -->
