--- a/feitio-escola.html
+++ b/feitio-escola.html
@@ -93,7 +93,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- SimplyBook widget -->
-<script src="//widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
+<!-- <script src="//widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
 <script type="text/javascript">
   var widget = new SimplybookWidget({
     "widget_type":"button",
@@ -132,7 +132,7 @@
     "button_text_color":"#ffffff",
     "button_position":"right",
     "button_position_offset":"55%"});
-</script>
+</script> -->
 
 <!-- JS extra para reforçar segurança do link de pagamento -->
 <script>
